# Lab_1

./: .pre-commit-config.yaml  README  pyproject.toml  requirments
src/: __init__.py  calculator.py  confest.py  exceptions.py  main.py
src/lab_1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  calculator_test.py  confest.py  test_calculator.py
