[project]
name = "lab_1"
version = "0.1.0"
description = "Калькулятор обратной польской нотации"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "flake8>=7.0.0",
    "isort>=5.13.2",
    "pre-commit>=3.5.0",
    "pytest>=8.4.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
exclude = ".venv,build,dist"

[dependency-groups]
dev = [
    "docformatter>=1.7.7",
]
